0.9.2
- use the nodejs built-in querystring

0.9.1
- fix res.send() to set res._body to raw object, and set res.headers
- fix res.json() to set _body

0.9.0
- process requests async for a large bump in throughput

0.8.1
- fix 0 'use' steps before the mapped route
- make removeRoute accept routes from both mapRoute() and addRoute()

0.8.0
- fix restiq.error.Error* to construct proper Errors
- refactor middleware runner to always call the _finally steps

0.7.6
- restify compat: emit 'uncaughtException' on unhandled mw error
- restify compat: experimental restiq.InvalidCredentialsError

0.7.5
- check that the middleware error.code is a plausible 3 digit http status before using it
- upgrade to qhttp-0.6.0
- document setErrorHandler
- let addStep(func, where) accept its args in either order

0.7.4
- apply restify emulation before the route is mapped, to have res.send available in unit tests

0.7.3
- only set the restify error handler once at start, to allow caller to override
- restify compat: not a restify error if parseBody cannot decode body (with mapParams:false)
- fix parseBody to set to decoded if it decodes to falsy

0.7.2
- add to ci and coverage tests
- test with qnit 0.15.1 with fixed failure exitcode
- fix typo in makeError source string
- use newer qmock
- update dependencies (no need for qmock, yes for querystring)
- guard against possible null deref in rlib

0.7.1
- faster readBody() data chunk concatenation
- list qmock as a dependency (been one since 2015)
- fix: always return a Buffer in readBinary mode
- fix: parseAuthorization mw should run ok without a callback

0.7.0
- middleware builder functions
- maxBodySize readBody and parseReadBodyParams option

0.6.3
- restify compat: provide res._body
- restify compat: suppress errors from `after`
- run tests with qnit
- upgrade aflow to 0.10.1 for speedup

0.6.2
- fix potential null deref on unmapped routes
- new .gitignore
- fix and clean up Readme, thanks @fidian!

0.6.1
- add req.path() compat method