@@ -31,7 +31,7 @@
   ],
   "dependencies": {
     "aflow": "0.10.1",
-    "qhttp": "0.6.0"
+    "qhttp": "0.6.1"
   },
   "devDependencies": {
     "qnit": "0.18.1"
