@@ -1,5 +1,6 @@
 0.9.2
-- use the nodejs built-in querystring
+- use the nodejs built-in querystring for encoding x-www-form-urlencoded responses
+- upgrade qhttp for fixed http_parse_query() (decode + into ' ' space)
 
 0.9.1
 - fix res.send() to set res._body to raw object, and set res.headers
